<resources>
    <string name="app_name">Recipe-Shop-App-Version</string>
    <string name="search_label">"Search"</string>
    <string name="favorites_label">"Favorites"</string>
    <string name="grocery_list_label">"Grocery List"</string>
    <string name="settings_label">"Settings"</string>
    <string name="about_us_label">"About Us"</string>
    <string name="login_label">"Login"</string>
    <string name="ip_label">"ip: "</string>
    <string name="username_label">"Username: "</string>
    <string name="password_label">"Password: "</string>
    <string name="register_prompt">Not a member?</string>
    <string name="register_label">Register</string>
    <string name="confirm_label">"Confirm Password: "</string>
    <string name="login_prompt">Already a member?</string>
    <string name="meal_type_label">"Meal Type: "</string>
    <string name="cooking_time">"Cooking Time: "</string>
    <string name="dash">" - "</string>
    <string name="keywords_label">"Keywords: "</string>
    <string name="logout_label">Logout</string>
    <string name="about_us_info">Recipe Shop is an online platform built for anyone who loves to cook or needs a hand in preparing meals. Recipe shop aims to provide convenience in the process of preparing meals and grocery shopping; and allows people of similar interests to find and share their favorite recipes.</string>
    <string name="edamame_link">
        <a href="https://developer.edamam.com/edamam-docs-recipe-api">Edamame API</a>
    </string>
    <string name="github_app_link">
        <a href="https://github.com/njzfjiang/Recipe-Shop-App-Version">App GitHub Repo</a>
    </string>
    <string name="github_link">
        <a href="https://github.com/njzfjiang/Recipe-Shop">GitHub Repo</a>
    </string>
    <string name="webpage_link">
        <a href="http://">Webpage Version</a>
    </string>
    <string name="recipe_info_label">Recipe Info</string>
    <string name="recipe_source_label">Recipe Source</string>
    <string name="ingredients_label">Ingredients</string>
    <string name="list_of_ingredients">List of Ingredients</string>
    <string name="preparation_label">Preparation</string>
    <string name="find_instructions_here">Find instructions here</string>
    <string name="remove_from_favorites">Remove from Favorites</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="our_mission">Our Mission</string>
    <string name="upload_recipe">Upload Recipe</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="upload_image">Upload Image</string>
    <string name="uploader">"Uploader: "</string>
    <string name="your_recipes">Your Recipes</string>
    <string name="upload_new_recipe">Upload New Recipe</string>
    <string name="author">"Author: "</string>
    <string name="are_you_sure">Are you sure you want to delete this recipe?</string>
</resources>