<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recipe_info_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.RecipeInfoActivity"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fadeScrollbars="true"
        android:fadingEdgeLength="16dp"
        android:isScrollContainer="true"
        android:scrollIndicators="top|bottom"
        android:scrollbarSize="8dp"
        android:scrollbarStyle="insideOverlay"
        android:scrollbarThumbVertical="@color/transparent_black_25"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pageContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:id="@+id/pageTitle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/pageTitle">

                <TextView
                    android:id="@+id/recipeInfoTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="32sp"
                    android:paddingTop="64sp"
                    android:paddingRight="32sp"
                    android:paddingBottom="8sp"
                    android:text="@string/recipe_info_label"
                    android:textAlignment="center"
                    android:textSize="34sp" />

                <TextView
                    android:id="@+id/recipeSource"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="32sp"
                    android:paddingTop="8sp"
                    android:paddingRight="32sp"
                    android:paddingBottom="16sp"
                    android:text="@string/recipe_source_label"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:layout_below="@id/recipeInfoTitle"/>
            </RelativeLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/recipeImageLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="32sp"
                android:paddingTop="16sp"
                android:paddingRight="32sp"
                android:paddingBottom="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pageTitle">

                <ImageView
                    android:id="@+id/recipeImage"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:contentDescription="Recipe Image"
                    android:scaleType="fitCenter"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@drawable/logo_transparent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <RelativeLayout
                android:id="@+id/ingredientsLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recipeImageLayout">

                <TextView
                    android:id="@+id/ingredientsTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="32dp"
                    android:paddingTop="8dp"
                    android:paddingRight="32dp"
                    android:paddingBottom="8dp"
                    android:text="@string/ingredients_label"
                    android:textAlignment="center"
                    android:textSize="34sp" />

                <TextView
                    android:id="@+id/ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="32sp"
                    android:paddingTop="8sp"
                    android:paddingRight="32sp"
                    android:paddingBottom="16sp"
                    android:text="@string/list_of_ingredients"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:layout_below="@id/ingredientsTitle"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/preparationLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ingredientsLayout">

                <TextView
                    android:id="@+id/preparationTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="32dp"
                    android:paddingTop="8dp"
                    android:paddingRight="32dp"
                    android:paddingBottom="8dp"
                    android:text="@string/preparation_label"
                    android:textAlignment="center"
                    android:textSize="34sp" />

                <TextView
                    android:id="@+id/instructionLink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="32sp"
                    android:paddingTop="8sp"
                    android:paddingRight="32sp"
                    android:paddingBottom="16sp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/find_instructions_here"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:layout_below="@id/preparationTitle"/>
            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu"/>
</androidx.constraintlayout.widget.ConstraintLayout>